<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        
	 <TextView
	     android:id="@+id/textView1"
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:text="@string/dialog_drupal_uri"
	     android:textAppearance="?android:attr/textAppearanceMedium" />
	
	 <EditText
	     android:id="@+id/login_drupal_url"
	     android:layout_width="match_parent"
	     android:layout_height="wrap_content"
	     android:inputType="textUri|textNoSuggestions"
	     android:text="http://" />
	
	 <TextView
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:text="@string/dialog_uid"
	     android:textAppearance="?android:attr/textAppearanceMedium" />
	
	 <EditText
	     android:id="@+id/login_uid"
	     android:layout_width="match_parent"
	     android:layout_height="wrap_content"
	     android:inputType="number" />
	
	 <TextView
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:text="@string/dialog_username"
	     android:textAppearance="?android:attr/textAppearanceMedium" />
	
	 <EditText
	     android:id="@+id/login_username"
	     android:layout_width="match_parent"
	     android:layout_height="wrap_content"
	     android:inputType="text|textNoSuggestions" 
	     android:text="restws_" >
	
	     <requestFocus />
	 </EditText>
	
	 <TextView
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:text="@string/dialog_password"
	     android:textAppearance="?android:attr/textAppearanceMedium" />
	
	 <EditText
	     android:id="@+id/login_password"
	     android:layout_width="match_parent"
	     android:layout_height="wrap_content"
	     android:inputType="textPassword" />
    </LinearLayout>
	
</ScrollView>
